<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item android:id="@+id/nav_fav"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/title_activity_favorites" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_access_time_black_24dp"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/account_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>
</menu>
